load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")
# load("//tools:ts_proto_library.bzl", "ts_proto_library")
# load("@npm_bazel_labs//:index.bzl", "ts_proto_library")
# load("@build_bazel_rules_typescript//:defs.bzl", "ts_proto_library")
# load("@npm//protoc-gen-ts:index.bzl", "ts_proto_library")
# load("@npm_bazel_labs//:index.bzl", "protobufjs_ts_library")
load("@npm//@bazel/labs:index.bzl", ts_proto_library = "protobufjs_ts_library")

# load("@npm_bazel_labs//:package.bzl", "npm_bazel_labs_dependencies")

# npm_bazel_labs_dependencies()

proto_library(
    name = "modules_proto",
    srcs = ["modules.proto"],
    strip_import_prefix = "/protobuf/modules/v1",
    visibility = ["//visibility:public"],
    deps = [],
)

go_proto_library(
    name = "modules_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/dzintars/bazel/protobuf/oswee/modules/v1",
    proto = ":modules_proto",
    visibility = ["//visibility:public"],
    deps = [],
)

go_library(
    name = "go_default_library",
    embed = [":modules_go_proto"],
    importpath = "github.com/dzintars/bazel/protobuf/oswee/modules/v1",
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "modules",
    deps = [
        ":modules_proto",
    ],
    visibility = ["//visibility:public"],
)

