load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/dzintars/bazel/platform/web/shell/server",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "server",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)
