load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/dzintars/bazel/platform/web/shell/server",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "server",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/api"],
    files = [":server"],
)
